--- a/2.html
+++ b/2.html
@@ -1,18 +1,24 @@
 <!doctype html>
 <html>
   <head>
-    <title>SYNDRA</title>
+    <title>SYNDRA-Skin</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <h1><a href="index.html">신드라</a></h1>
-    <ol>
-      <li><a href="1.html">스토리</a></li>
-      <li><a href="2.html">스킨</a></li>
-      <li><a href="3.html">스킬</a></li>
-    </ol>
-    <h2>Skin of <a href="https://universe.leagueoflegends.com/ko_KR/champion/syndra/">신드라</a></h2>
-    <p>별수호자 신드라</p>
-    <img src="syndra1.jpg" width="50%">
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">스토리</a></li>
+        <li><a href="2.html">스킨</a></li>
+        <li><a href="3.html">스킬</a></li>
+      </ol>
+      <div>
+        <h2>Skin of <a href="https://universe.leagueoflegends.com/ko_KR/champion/syndra/">신드라</a></h2>
+        <p>별수호자 신드라</p>
+        <img src="syndra1.jpg" width="50%">
+      </div>
+    </div>
   </body>
 </html>
