--- a/3.html
+++ b/3.html
@@ -2,21 +2,27 @@
 <html>
   <head>
     <title>SYNDRA-Skill</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <h1><a href="index.html">신드라</a></h1>
+    <div id="grid">
     <ol>
       <li><a href="1.html">스토리</a></li>
       <li><a href="2.html">스킨</a></li>
       <li><a href="3.html">스킬</a></li>
     </ol>
-    <h2>Skill of <a href="https://universe.leagueoflegends.com/ko_KR/champion/syndra/">신드라</a></h2>
-    <ul>
-      <li>어둠 구체</li>
-      <li>의지의 힘</li>
-      <li>적군 와해</li>
-      <li>풀려난 힘</li>
-    </ul>
+    <div>
+      <h2>Skill of <a href="https://universe.leagueoflegends.com/ko_KR/champion/syndra/">신드라</a></h2>
+      <ul>
+        <li>어둠 구체</li>
+        <li>의지의 힘</li>
+        <li>적군 와해</li>
+        <li>풀려난 힘</li>
+      </ul>
+    </div>
+  </div>
   </body>
 </html>
