--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
   <head>
     <title>SYNDRA</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <h1><a href="index.html">신드라</a></h1>
-    <ol>
-      <li><a href="1.html">스토리</a></li>
-      <li><a href="2.html">스킨</a></li>
-      <li><a href="3.html">스킬</a></li>
-    </ol>
-    <h2>신드라</h2>
-    <img src="syndra2.jpg" width="500px">
-    <h3>내 힘은 무한하다. 누구도 날 막진 못해.</h3>
-
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">스토리</a></li>
+        <li><a href="2.html">스킨</a></li>
+        <li><a href="3.html">스킬</a></li>
+      </ol>
+      <div>
+        <h2>신드라</h2>
+        <img src="syndra2.jpg" width="500px">
+        <h3>내 힘은 무한하다. 누구도 날 막진 못해.</h3>
+        <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/axzmUN90i7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
